# ZenMail

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/handlers/: imap.rs  mod.rs
src-tauri/src/models/: account.rs  connection.rs  email.rs  mod.rs
